# Copyright (C) 2020 Daniel Maksymow
# 1
# Copying and distribution of this file, with or without modification,
# are permitted in any medium without royalty provided the copyright
# notice and this notice are preserved.  This file is offered as-is,
# without any warranty.

project('gsequencer', 'c',
        license: 'GPL3',
        default_options: ['c_std=gnu99'],
        version: '3.6.23')

gsequencer_prefix = get_option('prefix')
gsequencer_includedir = join_paths(gsequencer_prefix, get_option('includedir'))
gsequencer_libdir = join_paths(gsequencer_prefix, get_option('libdir'))
gsequencer_datadir = join_paths(gsequencer_prefix, get_option('datadir'))
gsequencer_localedir = join_paths(gsequencer_prefix, get_option('localedir'))
gsequencer_applicationsdir = join_paths(gsequencer_datadir, 'applications')
gsequencer_appdatadir = join_paths(gsequencer_datadir, 'metainfo')

gnome = import('gnome')

compiler = meson.get_compiler('c')
# TODO: all dependencies have to be defined here globally
gtk_dependency = dependency('gtk+-3.0')
glib_dependency = dependency('glib-2.0', version: '>= 2.58.0')
gobject_dependency = dependency('gobject-2.0', version: '>= 2.58.0')
gthread_dependency = dependency('gthread-2.0', version: '>= 2.58.0')
gio_dependency = dependency('gio-2.0', version: '>= 2.58.0')
cunit_dependency = dependency('cunit')
xml2_dependency = dependency('libxml-2.0')
soup_dependency = dependency('libsoup-2.4')
instpatch_dependency = dependency('libinstpatch-1.0')
samplerate_dependency = dependency('samplerate')
fftw3_dependency = dependency('fftw3')
if get_option('alsa')
  alsa_dependency = dependency('alsa')
endif
if get_option('jack')
  jack_dependency = dependency('jack')
endif
if get_option('poppler')
  poppler_dependency = dependency('poppler-glib')
endif
if get_option('webkit')
  webkit_dependency = dependency('webkit2gtk-4.0')
endif
if get_option('gstreamer')
  gstreamer_dependency = dependency('gstreamer-1.0')
  gstreamer_audio_dependency = dependency('gstreamer-audio-1.0')
  gstreamer_video_dependency = dependency('gstreamer-video-1.0')
  gstreamer_app_dependency = dependency('gstreamer-app-1.0')
  gstreamer_pbutils_dependency = dependency('gstreamer-pbutils-1.0')
endif
m_dependency = compiler.find_library('m', required: true)
dl_dependency = compiler.find_library('dl', required: true)
crypt_dependency =   compiler.find_library('crypt', required: true)

#destdir = get_option('DESTDIR')
add_project_arguments('-DDESTDIR="@0@"'.format(get_option('prefix')),
                      language:'c')

includes = include_directories(
  '.'
  )

ags_headers = [
  'ags/util/ags_id_generator.h',
  'ags/util/ags_destroy_util.h',
  'ags/util/ags_soundcard_helper.h',
  'ags/util/ags_list_util.h',
  'ags/lib/ags_function.h',
  'ags/lib/ags_complex.h',
  'ags/lib/ags_solver_vector.h',
  'ags/lib/ags_math_util.h',
  'ags/lib/ags_string_util.h',
  'ags/lib/ags_endian.h',
  'ags/lib/ags_log.h',
  'ags/lib/ags_turtle_manager.h',
  'ags/lib/ags_buffer_util.h',
  'ags/lib/ags_time.h',
  'ags/lib/ags_turtle.h',
  'ags/lib/ags_uuid.h',
  'ags/lib/ags_solver_polynomial.h',
  'ags/lib/ags_regex.h',
  'ags/lib/ags_conversion.h',
  'ags/lib/ags_solver_matrix.h',
  'ags/object/ags_connectable.h',
  'ags/object/ags_soundcard.h',
  'ags/object/ags_applicable.h',
  'ags/object/ags_marshal.h',
  'ags/object/ags_sequencer.h',
  'ags/object/ags_tactable.h',
  'ags/object/ags_main_loop.h',
  'ags/object/ags_seekable.h',
  'ags/object/ags_cursor.h',
  'ags/object/ags_sound_server.h',
  'ags/object/ags_countable.h',
  'ags/object/ags_portlet.h',
  'ags/object/ags_globals.h',
  'ags/object/ags_application_context.h',
  'ags/object/ags_priority.h',
  'ags/object/ags_macros.h',
  'ags/object/ags_mutable.h',
  'ags/object/ags_plugin.h',
  'ags/object/ags_config.h',
  'ags/file/ags_file.h',
  'ags/file/ags_file_launch.h',
  'ags/file/ags_file_lookup.h',
  'ags/file/ags_file_id_ref.h',
  'ags/file/ags_file_link.h',
]

ags_thread_headers = [
  'ags/thread/ags_concurrency_provider.h',
  'ags/thread/ags_returnable_thread.h',
  'ags/thread/ags_message_envelope.h',
  'ags/thread/ags_generic_main_loop.h',
  'ags/thread/ags_timestamp.h',
  'ags/thread/ags_task.h',
  'ags/thread/ags_message_delivery.h',
  'ags/thread/ags_thread_pool.h',
  'ags/thread/ags_thread_application_context.h',
  'ags/thread/ags_thread.h',
  'ags/thread/ags_worker_thread.h',
  'ags/thread/ags_task_launcher.h',
  'ags/thread/ags_destroy_worker.h',
  'ags/thread/ags_message_queue.h',
  'ags/thread/ags_task_completion.h',
]

ags_server_headers = [
  'ags/server/ags_server.h',
  'ags/server/ags_registry.h',
  'ags/server/ags_server_status.h',
  'ags/server/ags_server_application_context.h',
  'ags/server/ags_service_provider.h',
  'ags/server/controller/ags_front_controller.h',
  'ags/server/controller/ags_controller.h',
  'ags/server/controller/ags_plugin_controller.h',
  'ags/server/security/ags_authentication_manager.h',
  'ags/server/security/ags_password_store_manager.h',
  'ags/server/security/ags_auth_security_context.h',
  'ags/server/security/ags_authentication.h',
  'ags/server/security/ags_business_group.h',
  'ags/server/security/ags_xml_business_group.h',
  'ags/server/security/ags_password_store.h',
  'ags/server/security/ags_xml_certificate.h',
  'ags/server/security/ags_xml_authentication.h',
  'ags/server/security/ags_certificate.h',
  'ags/server/security/ags_certificate_manager.h',
  'ags/server/security/ags_xml_password_store.h',
  'ags/server/security/ags_security_context.h',
  'ags/server/security/ags_business_group_manager.h',
]

ags_audio_headers = [
  'ags/plugin/ags_plugin_stock.h',
  'ags/plugin/ags_lv2_turtle_parser.h',
  'ags/plugin/ags_lv2_plugin.h',
  'ags/plugin/ags_lv2_worker_manager.h',
  'ags/plugin/ags_plugin_port.h',
  'ags/plugin/ags_dssi_manager.h',
  'ags/plugin/ags_lv2_turtle_scanner.h',
  'ags/plugin/ags_lv2_preset_manager.h',
  'ags/plugin/ags_lv2_worker.h',
  'ags/plugin/ags_lv2_preset.h',
  'ags/plugin/ags_lv2_uri_map_manager.h',
  'ags/plugin/ags_ladspa_conversion.h',
  'ags/plugin/ags_lv2_manager.h',
  'ags/plugin/ags_base_plugin.h',
  'ags/plugin/ags_lv2_log_manager.h',
  'ags/plugin/ags_lv2ui_plugin.h',
  'ags/plugin/ags_dssi_plugin.h',
  'ags/plugin/ags_lv2ui_manager.h',
  'ags/plugin/ags_lv2_event_manager.h',
  'ags/plugin/ags_ladspa_manager.h',
  'ags/plugin/ags_lv2_conversion.h',
  'ags/plugin/ags_lv2_urid_manager.h',
  'ags/plugin/ags_ladspa_plugin.h',
  'ags/plugin/ags_lv2_option_manager.h',
  'ags/audio/wasapi/ags_wasapi_devout.h',
  'ags/audio/wasapi/ags_wasapi_devin.h',
  'ags/audio/ags_recall_recycling.h',
  'ags/audio/ags_devin.h',
  'ags/audio/ags_fifoout.h',
  'ags/audio/ags_sfz_synth_util.h',
  'ags/audio/ags_synth_util.h',
  'ags/audio/ags_notation.h',
  'ags/audio/ags_fm_synth_util.h',
  'ags/audio/fx/ags_fx_playback_audio_signal.h',
  'ags/audio/fx/ags_fx_eq10_channel.h',
  'ags/audio/fx/ags_fx_notation_channel.h',
  'ags/audio/fx/ags_fx_lv2_audio_signal.h',
  'ags/audio/fx/ags_fx_analyse_recycling.h',
  'ags/audio/fx/ags_fx_volume_audio_signal.h',
  'ags/audio/fx/ags_fx_envelope_audio.h',
  'ags/audio/fx/ags_fx_lv2_channel_processor.h',
  'ags/audio/fx/ags_fx_eq10_audio_signal.h',
  'ags/audio/fx/ags_fx_dssi_channel_processor.h',
  'ags/audio/fx/ags_fx_peak_audio_signal.h',
  'ags/audio/fx/ags_fx_playback_audio.h',
  'ags/audio/fx/ags_fx_analyse_audio_signal.h',
  'ags/audio/fx/ags_fx_playback_channel_processor.h',
  'ags/audio/fx/ags_fx_buffer_recycling.h',
  'ags/audio/fx/ags_fx_eq10_audio_processor.h',
  'ags/audio/fx/ags_fx_playback_recycling.h',
  'ags/audio/fx/ags_fx_ladspa_audio.h',
  'ags/audio/fx/ags_fx_analyse_audio.h',
  'ags/audio/fx/ags_fx_envelope_recycling.h',
  'ags/audio/fx/ags_fx_dssi_channel.h',
  'ags/audio/fx/ags_fx_volume_recycling.h',
  'ags/audio/fx/ags_fx_ladspa_audio_processor.h',
  'ags/audio/fx/ags_fx_dssi_recycling.h',
  'ags/audio/fx/ags_fx_envelope_channel_processor.h',
  'ags/audio/fx/ags_fx_envelope_audio_processor.h',
  'ags/audio/fx/ags_fx_peak_audio.h',
  'ags/audio/fx/ags_fx_analyse_channel_processor.h',
  'ags/audio/fx/ags_fx_notation_channel_processor.h',
  'ags/audio/fx/ags_fx_ladspa_recycling.h',
  'ags/audio/fx/ags_fx_lv2_audio.h',
  'ags/audio/fx/ags_fx_playback_channel.h',
  'ags/audio/fx/ags_fx_eq10_audio.h',
  'ags/audio/fx/ags_fx_ladspa_channel_processor.h',
  'ags/audio/fx/ags_fx_eq10_recycling.h',
  'ags/audio/fx/ags_fx_envelope_channel.h',
  'ags/audio/fx/ags_fx_dssi_audio.h',
  'ags/audio/fx/ags_fx_analyse_channel.h',
  'ags/audio/fx/ags_fx_pattern_recycling.h',
  'ags/audio/fx/ags_fx_dssi_audio_signal.h',
  'ags/audio/fx/ags_fx_volume_audio.h',
  'ags/audio/fx/ags_fx_pattern_audio_signal.h',
  'ags/audio/fx/ags_fx_volume_channel_processor.h',
  'ags/audio/fx/ags_fx_buffer_audio_processor.h',
  'ags/audio/fx/ags_fx_analyse_audio_processor.h',
  'ags/audio/fx/ags_fx_buffer_audio_signal.h',
  'ags/audio/fx/ags_fx_volume_channel.h',
  'ags/audio/fx/ags_fx_envelope_audio_signal.h',
  'ags/audio/fx/ags_fx_pattern_channel_processor.h',
  'ags/audio/fx/ags_fx_pattern_audio.h',
  'ags/audio/fx/ags_fx_dssi_audio_processor.h',
  'ags/audio/fx/ags_fx_ladspa_channel.h',
  'ags/audio/fx/ags_fx_peak_channel_processor.h',
  'ags/audio/fx/ags_fx_peak_channel.h',
  'ags/audio/fx/ags_fx_eq10_channel_processor.h',
  'ags/audio/fx/ags_fx_notation_audio_processor.h',
  'ags/audio/fx/ags_fx_notation_recycling.h',
  'ags/audio/fx/ags_fx_lv2_audio_processor.h',
  'ags/audio/fx/ags_fx_volume_audio_processor.h',
  'ags/audio/fx/ags_fx_pattern_channel.h',
  'ags/audio/fx/ags_fx_buffer_channel_processor.h',
  'ags/audio/fx/ags_fx_peak_audio_processor.h',
  'ags/audio/fx/ags_fx_lv2_recycling.h',
  'ags/audio/fx/ags_fx_playback_audio_processor.h',
  'ags/audio/fx/ags_fx_peak_recycling.h',
  'ags/audio/fx/ags_fx_lv2_channel.h',
  'ags/audio/fx/ags_fx_notation_audio.h',
  'ags/audio/fx/ags_fx_buffer_channel.h',
  'ags/audio/fx/ags_fx_pattern_audio_processor.h',
  'ags/audio/fx/ags_fx_buffer_audio.h',
  'ags/audio/fx/ags_fx_ladspa_audio_signal.h',
  'ags/audio/fx/ags_fx_notation_audio_signal.h',
  'ags/audio/ags_filter_util.h',
  'ags/audio/ags_recall_ladspa_run.h',
  'ags/audio/ags_recycling.h',
  'ags/audio/ags_sf2_synth_util.h',
  'ags/audio/ags_sound_provider.h',
  'ags/audio/ags_recall_channel_run.h',
  'ags/audio/ags_soundcard_util.h',
  'ags/audio/ags_recall_audio_run.h',
  'ags/audio/ags_devout.h',
  'ags/audio/pulse/ags_pulse_port.h',
  'ags/audio/pulse/ags_pulse_server.h',
  'ags/audio/pulse/ags_pulse_client.h',
  'ags/audio/pulse/ags_pulse_devin.h',
  'ags/audio/pulse/ags_pulse_devout.h',
  'ags/audio/gstreamer/ags_gstreamer_client.h',
  'ags/audio/gstreamer/ags_gstreamer_server.h',
  'ags/audio/gstreamer/ags_gstreamer_devout.h',
  'ags/audio/gstreamer/ags_gstreamer_port.h',
  'ags/audio/gstreamer/ags_gstreamer_devin.h',
  'ags/audio/ags_audio.h',
  'ags/audio/ags_recall_dssi_run.h',
  'ags/audio/ags_audio_buffer_util.h',
  'ags/audio/ags_recycling_context.h',
  'ags/audio/ags_recall_audio.h',
  'ags/audio/ags_recall_audio_signal.h',
  'ags/audio/recall/ags_loop_channel.h',
  'ags/audio/recall/ags_mute_audio_run.h',
  'ags/audio/recall/ags_volume_recycling.h',
  'ags/audio/recall/ags_volume_channel.h',
  'ags/audio/recall/ags_peak_channel.h',
  'ags/audio/recall/ags_play_recycling.h',
  'ags/audio/recall/ags_record_midi_audio_run.h',
  'ags/audio/recall/ags_copy_pattern_audio_run.h',
  'ags/audio/recall/ags_stream_recycling.h',
  'ags/audio/recall/ags_feed_audio_signal.h',
  'ags/audio/recall/ags_envelope_channel_run.h',
  'ags/audio/recall/ags_prepare_audio_signal.h',
  'ags/audio/recall/ags_lfo_recycling.h',
  'ags/audio/recall/ags_play_channel.h',
  'ags/audio/recall/ags_mute_audio_signal.h',
  'ags/audio/recall/ags_lfo_channel.h',
  'ags/audio/recall/ags_count_beats_audio_run.h',
  'ags/audio/recall/ags_play_channel_run_master.h',
  'ags/audio/recall/ags_play_wave_audio_run.h',
  'ags/audio/recall/ags_copy_recycling.h',
  'ags/audio/recall/ags_prepare_channel_run.h',
  'ags/audio/recall/ags_play_dssi_audio_run.h',
  'ags/audio/recall/ags_eq10_channel.h',
  'ags/audio/recall/ags_analyse_channel_run.h',
  'ags/audio/recall/ags_peak_audio_signal.h',
  'ags/audio/recall/ags_prepare_recycling.h',
  'ags/audio/recall/ags_stream_channel_run.h',
  'ags/audio/recall/ags_capture_wave_channel_run.h',
  'ags/audio/recall/ags_route_lv2_audio_run.h',
  'ags/audio/recall/ags_play_wave_audio.h',
  'ags/audio/recall/ags_mute_channel_run.h',
  'ags/audio/recall/ags_feed_recycling.h',
  'ags/audio/recall/ags_envelope_audio_signal.h',
  'ags/audio/recall/ags_route_dssi_audio_run.h',
  'ags/audio/recall/ags_analyse_channel.h',
  'ags/audio/recall/ags_stream_audio_signal.h',
  'ags/audio/recall/ags_play_dssi_audio.h',
  'ags/audio/recall/ags_volume_audio_signal.h',
  'ags/audio/recall/ags_peak_recycling.h',
  'ags/audio/recall/ags_rt_stream_channel.h',
  'ags/audio/recall/ags_play_notation_audio.h',
  'ags/audio/recall/ags_envelope_channel.h',
  'ags/audio/recall/ags_play_channel_run.h',
  'ags/audio/recall/ags_count_beats_audio.h',
  'ags/audio/recall/ags_envelope_recycling.h',
  'ags/audio/recall/ags_play_lv2_audio_run.h',
  'ags/audio/recall/ags_analyse_recycling.h',
  'ags/audio/recall/ags_buffer_recycling.h',
  'ags/audio/recall/ags_rt_stream_audio_signal.h',
  'ags/audio/recall/ags_buffer_audio_signal.h',
  'ags/audio/recall/ags_stream_channel.h',
  'ags/audio/recall/ags_record_midi_audio.h',
  'ags/audio/recall/ags_volume_channel_run.h',
  'ags/audio/recall/ags_play_audio_signal.h',
  'ags/audio/recall/ags_feed_channel.h',
  'ags/audio/recall/ags_mute_audio.h',
  'ags/audio/recall/ags_peak_channel_run.h',
  'ags/audio/recall/ags_copy_audio_signal.h',
  'ags/audio/recall/ags_play_notation_audio_run.h',
  'ags/audio/recall/ags_copy_channel_run.h',
  'ags/audio/recall/ags_eq10_audio_signal.h',
  'ags/audio/recall/ags_analyse_audio_signal.h',
  'ags/audio/recall/ags_feed_channel_run.h',
  'ags/audio/recall/ags_play_audio.h',
  'ags/audio/recall/ags_route_lv2_audio.h',
  'ags/audio/recall/ags_lfo_audio_signal.h',
  'ags/audio/recall/ags_copy_channel.h',
  'ags/audio/recall/ags_capture_wave_channel.h',
  'ags/audio/recall/ags_delay_audio_run.h',
  'ags/audio/recall/ags_buffer_channel_run.h',
  'ags/audio/recall/ags_mute_recycling.h',
  'ags/audio/recall/ags_buffer_channel.h',
  'ags/audio/recall/ags_loop_channel_run.h',
  'ags/audio/recall/ags_route_dssi_audio.h',
  'ags/audio/recall/ags_delay_audio.h',
  'ags/audio/recall/ags_copy_pattern_channel_run.h',
  'ags/audio/recall/ags_lfo_channel_run.h',
  'ags/audio/recall/ags_capture_wave_audio.h',
  'ags/audio/recall/ags_play_wave_channel_run.h',
  'ags/audio/recall/ags_rt_stream_recycling.h',
  'ags/audio/recall/ags_copy_pattern_channel.h',
  'ags/audio/recall/ags_mute_channel.h',
  'ags/audio/recall/ags_play_wave_channel.h',
  'ags/audio/recall/ags_copy_pattern_audio.h',
  'ags/audio/recall/ags_eq10_channel_run.h',
  'ags/audio/recall/ags_capture_wave_audio_run.h',
  'ags/audio/recall/ags_play_lv2_audio.h',
  'ags/audio/recall/ags_prepare_channel.h',
  'ags/audio/recall/ags_rt_stream_channel_run.h',
  'ags/audio/recall/ags_eq10_recycling.h',
  'ags/audio/ags_sfz_synth_generator.h',
  'ags/audio/ags_recall_dssi.h',
  'ags/audio/ags_frequency_map_manager.h',
  'ags/audio/ags_recall_dependency.h',
  'ags/audio/ags_port_util.h',
  'ags/audio/ags_automation.h',
  'ags/audio/jack/ags_jack_client.h',
  'ags/audio/jack/ags_jack_devin.h',
  'ags/audio/jack/ags_jack_devout.h',
  'ags/audio/jack/ags_jack_port.h',
  'ags/audio/jack/ags_jack_server.h',
  'ags/audio/jack/ags_jack_midiin.h',
  'ags/audio/ags_audio_signal.h',
  'ags/audio/ags_buffer.h',
  'ags/audio/ags_generic_recall_recycling.h',
  'ags/audio/ags_generic_recall_channel_run.h',
  'ags/audio/ags_synth_enums.h',
  'ags/audio/task/ags_apply_presets.h',
  'ags/audio/task/ags_resize_audio.h',
  'ags/audio/task/ags_start_audio.h',
  'ags/audio/task/ags_free_selection.h',
  'ags/audio/task/ags_start_sequencer.h',
  'ags/audio/task/ags_cancel_channel.h',
  'ags/audio/task/ags_set_audio_channels.h',
  'ags/audio/task/ags_open_single_file.h',
  'ags/audio/task/ags_start_channel.h',
  'ags/audio/task/ags_open_sf2_instrument.h',
  'ags/audio/task/ags_remove_audio_signal.h',
  'ags/audio/task/ags_add_note.h',
  'ags/audio/task/ags_apply_sf2_synth.h',
  'ags/audio/task/ags_export_output.h',
  'ags/audio/task/ags_add_soundcard.h',
  'ags/audio/task/ags_add_effect.h',
  'ags/audio/task/ags_add_audio_signal.h',
  'ags/audio/task/ags_reset_fx_peak.h',
  'ags/audio/task/ags_open_file.h',
  'ags/audio/task/ags_reset_peak.h',
  'ags/audio/task/ags_reset_fx_analyse.h',
  'ags/audio/task/ags_link_channel.h',
  'ags/audio/task/ags_stop_sequencer.h',
  'ags/audio/task/ags_reset_note.h',
  'ags/audio/task/ags_tic_device.h',
  'ags/audio/task/ags_apply_sequencer_length.h',
  'ags/audio/task/ags_apply_sfz_synth.h',
  'ags/audio/task/ags_remove_note.h',
  'ags/audio/task/ags_set_buffer_size.h',
  'ags/audio/task/ags_apply_tact.h',
  'ags/audio/task/ags_clear_buffer.h',
  'ags/audio/task/ags_set_format.h',
  'ags/audio/task/ags_open_sfz_file.h',
  'ags/audio/task/ags_set_muted.h',
  'ags/audio/task/ags_open_wave.h',
  'ags/audio/task/ags_cancel_audio.h',
  'ags/audio/task/ags_remove_audio.h',
  'ags/audio/task/ags_set_samplerate.h',
  'ags/audio/task/ags_apply_bpm.h',
  'ags/audio/task/ags_apply_sound_config.h',
  'ags/audio/task/ags_open_sf2_sample.h',
  'ags/audio/task/ags_start_soundcard.h',
  'ags/audio/task/ags_clear_audio_signal.h',
  'ags/audio/task/ags_switch_buffer_flag.h',
  'ags/audio/task/ags_toggle_pattern_bit.h',
  'ags/audio/task/ags_stop_soundcard.h',
  'ags/audio/task/ags_reset_amplitude.h',
  'ags/audio/task/ags_crop_note.h',
  'ags/audio/task/ags_set_device.h',
  'ags/audio/task/ags_apply_synth.h',
  'ags/audio/task/ags_add_audio.h',
  'ags/audio/task/ags_seek_soundcard.h',
  'ags/audio/task/ags_move_note.h',
  'ags/audio/task/ags_remove_soundcard.h',
  'ags/audio/ags_output.h',
  'ags/audio/ags_input.h',
  'ags/audio/midi/ags_midi_parser.h',
  'ags/audio/midi/ags_midi_builder.h',
  'ags/audio/midi/ags_midi_buffer_util.h',
  'ags/audio/midi/ags_midi_file.h',
  'ags/audio/midi/ags_midi_util.h',
  'ags/audio/ags_channel.h',
  'ags/audio/thread/ags_sf2_loader.h',
  'ags/audio/thread/ags_channel_thread.h',
  'ags/audio/thread/ags_sequencer_thread.h',
  'ags/audio/thread/ags_soundcard_thread.h',
  'ags/audio/thread/ags_wave_loader.h',
  'ags/audio/thread/ags_audio_thread.h',
  'ags/audio/thread/ags_sfz_loader.h',
  'ags/audio/thread/ags_audio_loop.h',
  'ags/audio/thread/ags_export_thread.h',
  'ags/audio/audio-unit/ags_audio_unit_client.h',
  'ags/audio/audio-unit/ags_audio_unit_devin.h',
  'ags/audio/audio-unit/ags_audio_unit_server.h',
  'ags/audio/audio-unit/ags_audio_unit_port.h',
  'ags/audio/audio-unit/ags_audio_unit_devout.h',
  'ags/audio/ags_recall_lv2.h',
  'ags/audio/ags_acceleration.h',
  'ags/audio/ags_midiin.h',
  'ags/audio/ags_recall_ladspa.h',
  'ags/audio/ags_lfo_synth_util.h',
  'ags/audio/ags_preset.h',
  'ags/audio/ags_recall_container.h',
  'ags/audio/ags_fourier_transform_util.h',
  'ags/audio/ags_audio_application_context.h',
  'ags/audio/ags_track.h',
  'ags/audio/ags_wave.h',
  'ags/audio/ags_diatonic_scale.h',
  'ags/audio/ags_playback.h',
  'ags/audio/ags_port.h',
  'ags/audio/ags_midi.h',
  'ags/audio/ags_pattern.h',
  'ags/audio/ags_fast_pitch_util.h',
  'ags/audio/ags_recall_factory.h',
  'ags/audio/ags_fx_factory.h',
  'ags/audio/ags_recall_lv2_run.h',
  'ags/audio/ags_recall.h',
  'ags/audio/ags_sf2_synth_generator.h',
  'ags/audio/ags_recall_id.h',
  'ags/audio/ags_char_buffer_util.h',
  'ags/audio/ags_sequencer_util.h',
  'ags/audio/ags_sound_enums.h',
  'ags/audio/core-audio/ags_core_audio_devin.h',
  'ags/audio/core-audio/ags_core_audio_midiin.h',
  'ags/audio/core-audio/ags_core_audio_server.h',
  'ags/audio/core-audio/ags_core_audio_client.h',
  'ags/audio/core-audio/ags_core_audio_devout.h',
  'ags/audio/core-audio/ags_core_audio_port.h',
  'ags/audio/osc/ags_osc_xmlrpc_message.h',
  'ags/audio/osc/ags_osc_xmlrpc_server.h',
  'ags/audio/osc/controller/ags_osc_info_controller.h',
  'ags/audio/osc/controller/ags_osc_action_controller.h',
  'ags/audio/osc/controller/ags_osc_front_controller.h',
  'ags/audio/osc/controller/ags_osc_controller.h',
  'ags/audio/osc/controller/ags_osc_export_controller.h',
  'ags/audio/osc/controller/ags_osc_plugin_controller.h',
  'ags/audio/osc/controller/ags_osc_renew_controller.h',
  'ags/audio/osc/controller/ags_osc_node_controller.h',
  'ags/audio/osc/controller/ags_osc_config_controller.h',
  'ags/audio/osc/controller/ags_osc_status_controller.h',
  'ags/audio/osc/controller/ags_osc_meter_controller.h',
  'ags/audio/osc/ags_osc_message.h',
  'ags/audio/osc/ags_osc_client.h',
  'ags/audio/osc/ags_osc_util.h',
  'ags/audio/osc/ags_osc_builder.h',
  'ags/audio/osc/ags_osc_response.h',
  'ags/audio/osc/ags_osc_buffer_util.h',
  'ags/audio/osc/xmlrpc/ags_osc_xmlrpc_controller.h',
  'ags/audio/osc/ags_osc_server.h',
  'ags/audio/osc/ags_osc_parser.h',
  'ags/audio/osc/ags_osc_websocket_connection.h',
  'ags/audio/osc/ags_osc_connection.h',
  'ags/audio/ags_recall_channel.h',
  'ags/audio/ags_frequency_map.h',
  'ags/audio/ags_note.h',
  'ags/audio/ags_playback_domain.h',
  'ags/audio/file/ags_ipatch_gig_reader.h',
  'ags/audio/file/ags_audio_container.h',
  'ags/audio/file/ags_audio_file_link.h',
  'ags/audio/file/ags_ipatch_sample.h',
  'ags/audio/file/ags_audio_container_manager.h',
  'ags/audio/file/ags_sfz_file.h',
  'ags/audio/file/ags_sfz_sample.h',
  'ags/audio/file/ags_sndfile.h',
  'ags/audio/file/ags_sound_resource.h',
  'ags/audio/file/ags_gstreamer_file.h',
  'ags/audio/file/ags_ipatch.h',
  'ags/audio/file/ags_ipatch_sf2_reader.h',
  'ags/audio/file/ags_sfz_region.h',
  'ags/audio/file/ags_audio_file.h',
  'ags/audio/file/ags_sfz_group.h',
  'ags/audio/file/ags_sound_container.h',
  'ags/audio/file/ags_ipatch_dls2_reader.h',
  'ags/audio/file/ags_audio_file_manager.h',
  'ags/audio/ags_synth_generator.h',
]

ags_gui_headers = [
  'ags/widget/ags_dial.h',
  'ags/widget/ags_vlevel_box.h',
  'ags/widget/ags_level_box.h',
  'ags/widget/ags_hlevel_box.h',
  'ags/widget/ags_scale_box.h',
  'ags/widget/ags_indicator.h',
  'ags/widget/ags_vled_array.h',
  'ags/widget/ags_hindicator.h',
  'ags/widget/ags_level.h',
  'ags/widget/ags_ruler.h',
  'ags/widget/ags_hscale_box.h',
  'ags/widget/ags_vscale_box.h',
  'ags/widget/ags_scrolled_level_box.h',
  'ags/widget/ags_widget_marshal.h',
  'ags/widget/ags_piano_keys.h',
  'ags/widget/ags_scale.h',
  'ags/widget/ags_scrolled_scale_box.h',
  'ags/widget/ags_expander_set.h',
  'ags/widget/ags_cartesian.h',
  'ags/widget/ags_container.h',
  'ags/widget/ags_expander.h',
  'ags/widget/ags_vindicator.h',
  'ags/widget/ags_led_array.h',
  'ags/widget/ags_led.h',
  'ags/widget/ags_scrolled_piano.h',
  'ags/widget/ags_hled_array.h',
  'ags/widget/ags_notebook.h',
  'ags/widget/ags_piano.h',
]

libgsequencer_headers = [
  'ags/X/ags_soundcard_editor_callbacks.h',
  'ags/X/ags_plugin_preferences.h',
  'ags/X/ags_machine_util.h',
  'ags/X/ags_effect_pad_callbacks.h',
  'ags/X/ags_pad_editor.h',
  'ags/X/ags_server_preferences_callbacks.h',
  'ags/X/ags_output_editor.h',
  'ags/X/ags_machine_callbacks.h',
  'ags/X/ags_property_listing_editor.h',
  'ags/X/ags_export_soundcard.h',
  'ags/X/ags_osc_server_preferences.h',
  'ags/X/ags_osc_server_preferences_callbacks.h',
  'ags/X/ags_ui_provider.h',
  'ags/X/ags_quit_dialog_callbacks.h',
  'ags/X/ags_ladspa_browser.h',
  'ags/X/ags_line_editor.h',
  'ags/X/ags_lv2_browser.h',
  'ags/X/ags_menu_bar.h',
  'ags/X/import/ags_track_collection_callbacks.h',
  'ags/X/import/ags_track_collection_mapper.h',
  'ags/X/import/ags_midi_import_wizard.h',
  'ags/X/import/ags_midi_import_wizard_callbacks.h',
  'ags/X/import/ags_track_collection.h',
  'ags/X/import/ags_track_collection_mapper_callbacks.h',
  'ags/X/ags_midi_preferences_callbacks.h',
  'ags/X/ags_notation_editor_callbacks.h',
  'ags/X/ags_bulk_member.h',
  'ags/X/ags_wave_editor_callbacks.h',
  'ags/X/ags_input_listing_editor_callbacks.h',
  'ags/X/ags_input_collection_editor_callbacks.h',
  'ags/X/ags_performance_preferences.h',
  'ags/X/ags_listing_editor_callbacks.h',
  'ags/X/ags_automation_editor_callbacks.h',
  'ags/X/ags_automation_window.h',
  'ags/X/ags_pad_editor_callbacks.h',
  'ags/X/ags_listing_editor.h',
  'ags/X/ags_pad.h',
  'ags/X/ags_property_collection_editor.h',
  'ags/X/ags_line_callbacks.h',
  'ags/X/ags_effect_bridge_callbacks.h',
  'ags/X/ags_audio_preferences.h',
  'ags/X/ags_sheet_window_callbacks.h',
  'ags/X/ags_server_preferences.h',
  'ags/X/ags_input_listing_editor.h',
  'ags/X/ags_dssi_browser.h',
  'ags/X/ags_online_help_window_callbacks.h',
  'ags/X/ags_sequencer_editor_callbacks.h',
  'ags/X/ags_sheet_editor.h',
  'ags/X/ags_output_editor_callbacks.h',
  'ags/X/ags_online_help_window.h',
  'ags/X/ags_effect_bulk_callbacks.h',
  'ags/X/ags_menu_action_callbacks.h',
  'ags/X/ags_line_member_callbacks.h',
  'ags/X/ags_performance_preferences_callbacks.h',
  'ags/X/ags_link_editor_callbacks.h',
  'ags/X/ags_export_soundcard_callbacks.h',
  'ags/X/ags_notation_editor.h',
  'ags/X/ags_machine.h',
  'ags/X/ags_plugin_browser.h',
  'ags/X/ags_output_collection_editor_callbacks.h',
  'ags/X/ags_window.h',
  'ags/X/ags_connection_editor.h',
  'ags/X/ags_lv2_browser_callbacks.h',
  'ags/X/ags_output_listing_editor_callbacks.h',
  'ags/X/ags_sheet_editor_callbacks.h',
  'ags/X/ags_preferences.h',
  'ags/X/ags_automation_window_callbacks.h',
  'ags/X/ags_machine_editor.h',
  'ags/X/ags_connection_editor_callbacks.h',
  'ags/X/ags_link_collection_editor.h',
  'ags/X/task/ags_simple_file_read.h',
  'ags/X/task/ags_simple_file_write.h',
  'ags/X/ags_playback_window.h',
  'ags/X/ags_property_editor.h',
  'ags/X/ags_dssi_browser_callbacks.h',
  'ags/X/ags_context_menu.h',
  'ags/X/ags_bulk_member_callbacks.h',
  'ags/X/ags_plugin_browser_callbacks.h',
  'ags/X/ags_midi_preferences.h',
  'ags/X/ags_generic_preferences.h',
  'ags/X/ags_wave_window_callbacks.h',
  'ags/X/ags_effect_line.h',
  'ags/X/ags_machine_editor_callbacks.h',
  'ags/X/export/ags_machine_collection.h',
  'ags/X/export/ags_machine_collection_entry_callbacks.h',
  'ags/X/export/ags_machine_collection_callbacks.h',
  'ags/X/export/ags_midi_export_wizard.h',
  'ags/X/export/ags_wave_export_dialog.h',
  'ags/X/export/ags_wave_export_dialog_callbacks.h',
  'ags/X/export/ags_machine_collection_entry.h',
  'ags/X/export/ags_midi_export_wizard_callbacks.h',
  'ags/X/ags_navigation_callbacks.h',
  'ags/X/ags_plugin_preferences_callbacks.h',
  'ags/X/ags_sequencer_editor.h',
  'ags/X/ags_line_editor_callbacks.h',
  'ags/X/ags_xorg_application_context.h',
  'ags/X/ags_pad_callbacks.h',
  'ags/X/ags_effect_line_callbacks.h',
  'ags/X/ags_property_editor_callbacks.h',
  'ags/X/ags_export_window_callbacks.h',
  'ags/X/ags_link_editor.h',
  'ags/X/ags_navigation.h',
  'ags/X/editor/ags_wave_edit_box.h',
  'ags/X/editor/ags_notation_edit_callbacks.h',
  'ags/X/editor/ags_automation_meta_callbacks.h',
  'ags/X/editor/ags_sheet_edit.h',
  'ags/X/editor/ags_machine_selection.h',
  'ags/X/editor/ags_automation_meta.h',
  'ags/X/editor/ags_wave_toolbar.h',
  'ags/X/editor/ags_position_notation_cursor_dialog_callbacks.h',
  'ags/X/editor/ags_notation_toolbar_callbacks.h',
  'ags/X/editor/ags_notation_toolbar.h',
  'ags/X/editor/ags_move_note_dialog_callbacks.h',
  'ags/X/editor/ags_automation_edit_callbacks.h',
  'ags/X/editor/ags_automation_edit_box.h',
  'ags/X/editor/ags_envelope_dialog_callbacks.h',
  'ags/X/editor/ags_notation_meta_callbacks.h',
  'ags/X/editor/ags_ramp_acceleration_dialog.h',
  'ags/X/editor/ags_envelope_info.h',
  'ags/X/editor/ags_envelope_info_callbacks.h',
  'ags/X/editor/ags_move_note_dialog.h',
  'ags/X/editor/ags_position_wave_cursor_dialog_callbacks.h',
  'ags/X/editor/ags_select_acceleration_dialog.h',
  'ags/X/editor/ags_automation_edit.h',
  'ags/X/editor/ags_select_note_dialog.h',
  'ags/X/editor/ags_envelope_editor.h',
  'ags/X/editor/ags_ramp_acceleration_dialog_callbacks.h',
  'ags/X/editor/ags_position_wave_cursor_dialog.h',
  'ags/X/editor/ags_sheet_edit_callbacks.h',
  'ags/X/editor/ags_envelope_dialog.h',
  'ags/X/editor/ags_wave_meta_callbacks.h',
  'ags/X/editor/ags_pattern_envelope.h',
  'ags/X/editor/ags_wave_edit_callbacks.h',
  'ags/X/editor/ags_notation_meta.h',
  'ags/X/editor/ags_position_automation_cursor_dialog.h',
  'ags/X/editor/ags_machine_radio_button_callbacks.h',
  'ags/X/editor/ags_automation_toolbar_callbacks.h',
  'ags/X/editor/ags_position_automation_cursor_dialog_callbacks.h',
  'ags/X/editor/ags_vautomation_edit_box.h',
  'ags/X/editor/ags_select_buffer_dialog_callbacks.h',
  'ags/X/editor/ags_pattern_envelope_callbacks.h',
  'ags/X/editor/ags_vwave_edit_box.h',
  'ags/X/editor/ags_envelope_editor_callbacks.h',
  'ags/X/editor/ags_wave_meta.h',
  'ags/X/editor/ags_sheet_toolbar.h',
  'ags/X/editor/ags_machine_selector.h',
  'ags/X/editor/ags_scrolled_automation_edit_box.h',
  'ags/X/editor/ags_position_notation_cursor_dialog.h',
  'ags/X/editor/ags_automation_toolbar.h',
  'ags/X/editor/ags_wave_edit.h',
  'ags/X/editor/ags_select_acceleration_dialog_callbacks.h',
  'ags/X/editor/ags_machine_radio_button.h',
  'ags/X/editor/ags_scrolled_wave_edit_box.h',
  'ags/X/editor/ags_notation_edit.h',
  'ags/X/editor/ags_select_note_dialog_callbacks.h',
  'ags/X/editor/ags_crop_note_dialog_callbacks.h',
  'ags/X/editor/ags_wave_toolbar_callbacks.h',
  'ags/X/editor/ags_machine_selector_callbacks.h',
  'ags/X/editor/ags_crop_note_dialog.h',
  'ags/X/editor/ags_select_buffer_dialog.h',
  'ags/X/editor/ags_sheet_toolbar_callbacks.h',
  'ags/X/ags_input_editor.h',
  'ags/X/ags_ladspa_browser_callbacks.h',
  'ags/X/ags_resize_editor.h',
  'ags/X/ags_midi_dialog_callbacks.h',
  'ags/X/ags_input_editor_callbacks.h',
  'ags/X/ags_quit_dialog.h',
  'ags/X/ags_playback_window_callbacks.h',
  'ags/X/ags_line_member.h',
  'ags/X/ags_output_listing_editor.h',
  'ags/X/ags_wave_editor.h',
  'ags/X/ags_soundcard_editor.h',
  'ags/X/ags_output_collection_editor.h',
  'ags/X/ags_line.h',
  'ags/X/ags_export_window.h',
  'ags/X/ags_wave_window.h',
  'ags/X/ags_automation_editor.h',
  'ags/X/ags_window_callbacks.h',
  'ags/X/ags_effect_bulk.h',
  'ags/X/ags_line_member_editor.h',
  'ags/X/ags_midi_dialog.h',
  'ags/X/ags_generic_preferences_callbacks.h',
  'ags/X/ags_animation_window.h',
  'ags/X/ags_link_collection_editor_callbacks.h',
  'ags/X/machine/ags_cell_pattern_callbacks.h',
  'ags/X/machine/ags_ladspa_bridge.h',
  'ags/X/machine/ags_pitch_sampler_file_callbacks.h',
  'ags/X/machine/ags_fm_synth.h',
  'ags/X/machine/ags_ffplayer_callbacks.h',
  'ags/X/machine/ags_ffplayer_input_pad.h',
  'ags/X/machine/ags_drum_input_line.h',
  'ags/X/machine/ags_fm_oscillator.h',
  'ags/X/machine/ags_desk_input_pad_callbacks.h',
  'ags/X/machine/ags_dssi_bridge_callbacks.h',
  'ags/X/machine/ags_equalizer10_callbacks.h',
  'ags/X/machine/ags_ffplayer_bulk_input_callbacks.h',
  'ags/X/machine/ags_spectrometer_callbacks.h',
  'ags/X/machine/ags_lv2_bridge.h',
  'ags/X/machine/ags_drum_output_pad.h',
  'ags/X/machine/ags_matrix.h',
  'ags/X/machine/ags_mixer.h',
  'ags/X/machine/ags_panel_input_pad.h',
  'ags/X/machine/ags_drum_output_line_callbacks.h',
  'ags/X/machine/ags_desk_input_pad.h',
  'ags/X/machine/ags_ffplayer_input_line_callbacks.h',
  'ags/X/machine/ags_mixer_input_line.h',
  'ags/X/machine/ags_ffplayer_bridge_callbacks.h',
  'ags/X/machine/ags_oscillator.h',
  'ags/X/machine/ags_synth_callbacks.h',
  'ags/X/machine/ags_cell_pattern.h',
  'ags/X/machine/ags_fm_synth_input_pad.h',
  'ags/X/machine/ags_live_lv2_bridge.h',
  'ags/X/machine/ags_synth_input_pad.h',
  'ags/X/machine/ags_ffplayer_input_line.h',
  'ags/X/machine/ags_matrix_bulk_input.h',
  'ags/X/machine/ags_fm_syncsynth.h',
  'ags/X/machine/ags_sfz_synth.h',
  'ags/X/machine/ags_live_dssi_bridge.h',
  'ags/X/machine/ags_live_dssi_bridge_callbacks.h',
  'ags/X/machine/ags_drum_output_line.h',
  'ags/X/machine/ags_fm_syncsynth_callbacks.h',
  'ags/X/machine/ags_matrix_bridge.h',
  'ags/X/machine/ags_synth_input_line_callbacks.h',
  'ags/X/machine/ags_panel_input_line.h',
  'ags/X/machine/ags_dssi_bridge.h',
  'ags/X/machine/ags_desk.h',
  'ags/X/machine/ags_matrix_callbacks.h',
  'ags/X/machine/ags_live_lv2_bridge_callbacks.h',
  'ags/X/machine/ags_drum_output_pad_callbacks.h',
  'ags/X/machine/ags_drum_input_pad.h',
  'ags/X/machine/ags_sf2_synth.h',
  'ags/X/machine/ags_mixer_input_pad.h',
  'ags/X/machine/ags_ffplayer_bridge.h',
  'ags/X/machine/ags_syncsynth_callbacks.h',
  'ags/X/machine/ags_syncsynth.h',
  'ags/X/machine/ags_sf2_synth_callbacks.h',
  'ags/X/machine/ags_lv2_bridge_callbacks.h',
  'ags/X/machine/ags_matrix_bulk_input_callbacks.h',
  'ags/X/machine/ags_fm_oscillator_callbacks.h',
  'ags/X/machine/ags_drum_input_pad_callbacks.h',
  'ags/X/machine/ags_desk_callbacks.h',
  'ags/X/machine/ags_audiorec_callbacks.h',
  'ags/X/machine/ags_ffplayer_bulk_input.h',
  'ags/X/machine/ags_pitch_sampler_callbacks.h',
  'ags/X/machine/ags_oscillator_callbacks.h',
  'ags/X/machine/ags_matrix_bridge_callbacks.h',
  'ags/X/machine/ags_pattern_box_callbacks.h',
  'ags/X/machine/ags_ffplayer.h',
  'ags/X/machine/ags_pattern_box.h',
  'ags/X/machine/ags_synth_input_line.h',
  'ags/X/machine/ags_fm_synth_callbacks.h',
  'ags/X/machine/ags_sfz_synth_callbacks.h',
  'ags/X/machine/ags_equalizer10.h',
  'ags/X/machine/ags_drum.h',
  'ags/X/machine/ags_panel_input_line_callbacks.h',
  'ags/X/machine/ags_mixer_callbacks.h',
  'ags/X/machine/ags_pitch_sampler.h',
  'ags/X/machine/ags_audiorec.h',
  'ags/X/machine/ags_pitch_sampler_file.h',
  'ags/X/machine/ags_ffplayer_input_pad_callbacks.h',
  'ags/X/machine/ags_drum_callbacks.h',
  'ags/X/machine/ags_fm_synth_input_line_callbacks.h',
  'ags/X/machine/ags_fm_synth_input_line.h',
  'ags/X/machine/ags_panel.h',
  'ags/X/machine/ags_synth.h',
  'ags/X/machine/ags_spectrometer.h',
  'ags/X/machine/ags_panel_callbacks.h',
  'ags/X/machine/ags_ladspa_bridge_callbacks.h',
  'ags/X/machine/ags_drum_input_line_callbacks.h',
  'ags/X/ags_effect_pad.h',
  'ags/X/ags_preferences_callbacks.h',
  'ags/X/osc/controller/ags_ui_osc_renew_controller.h',
  'ags/X/ags_sheet_window.h',
  'ags/X/ags_audio_preferences_callbacks.h',
  'ags/X/ags_effect_separator.h',
  'ags/X/ags_input_collection_editor.h',
  'ags/X/ags_property_collection_editor_callbacks.h',
  'ags/X/ags_effect_bridge.h',
  'ags/X/ags_line_member_editor_callbacks.h',
  'ags/X/file/ags_simple_file.h',
]

subdir('po')
subdir('ags')
subdir('docs/reference/')

install_headers(ags_headers, ags_thread_headers, ags_server_headers, ags_audio_headers, ags_gui_headers, libgsequencer_headers, 'ags/libags.h', 'ags/libags-audio.h', 'ags/libags-gui.h',)

